--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brochure",
-  "version": "0.0.1",
-  "description": "Minimalistic Content 3 viewer based on Leaflet",
+  "version": "0.1.0",
+  "description": "Minimalistic GeoJSON viewer based on Leaflet",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +17,9 @@
     "proj4leaflet": "~0.6.0",
     "leaflet-tilejson": "~0.6.0",
     "reqwest": "~0.9.0",
-    "handlebars": "~1.0.12"
+    "handlebars": "~1.0.12",
+    "JSON": "~1.0.0",
+    "es5-shimify": "~2.0.5"
   },
   "devDependencies": {
     "browserify": "~2.32.4"
